Bump lib-orbit-common version to 1.3.0 to support local image cache. Allow setting properties e.g. imageprovider via environment variables. External configuration of properties by file in $user.home/orbit/config.properties Allow setting local image cache. Clean up CustomMenuAct commented code relating to now discontinued Mesos cluster.